<resources>
    <string name="varietal">Varietal</string>
    <string name="style">Style</string>
    <string name="vintage">Vintage</string>
    <string name="name">Name</string>
    <string name="rating">My Rating</string>
    <string name="price">Price</string>
    <string name="winery">Winery</string>
    <string name="hello">Hello World, Drync!</string>
    <string name="app_name">Drync Wine Pro</string>
    <string name="cellar_name">Drync Wine Pro - Cellar</string>
    <string name="find_your_wine">Find your wine.</string>
    <string name="fyw1">Drinking a wine you like?  Drync scours millions of listings to find the wine you\'re drinking along with reviews, ratings and prices.</string>
    <string name="fyw2">Quickly jot a note about a wine you\'re drinking.  Search and add it to your cellar when you\'ve got more time.</string>
    <string name="fyw3">Add wines to your Virtual Cellar to remember them later, share or track your collection.</string>
	<string name="fywbutton">Thanks, I get it.</string>
	<string name="searchtab">Search</string>
	<string name="cellartab">Cellar</string>
	<string name="quicknotestab">Quick Notes</string>
	<string name="topwinestab">Top Wines</string>
	<string name="settingstab">Settings</string>
	<string name="search">Search</string>
	<string name="cellar">Cellar</string>
	<string name="quicknotes">Quick Notes</string>
	<string name="topwines">Top Wines</string>
	<string name="settings">Settings</string>
    <string name="search_instructions">Press the search key to look up a word</string>
    <string name="title_wine_list">Wines</string>
    <string name="listview">ListView</string>
    <string name="searchtoast1">Welcome to Drync Search</string>
    <string name="searchtoast2">Find your wine by typing a few words from the wine label into the search bar above.</string>
    <string name="searchtoast3">You don\'t need to type in all the details - just make sure you give Drync enough to work with, like "2004 inman pinot" or "chateau margaux 2001".</string>
	<string name="regreq1">Please Register</string>
    <string name="regreq2">You must register to save wines in your Drync Cellar</string>
    <string name="regreq3">Registering also gives you: Cellar Backups, Access to your Cellar on Drync.com, Cellar Sharing, and Easy Device Upgrades</string>
	<string name="regreq4">(we will never sell/share your email)</string>
	<string name="freeex1">Upgrade to Drync Wine</string>
	<string name="freeex1_1">Pro</string>
    <string name="freeex2">Drync Wine</string>
    <string name="freeex2_1">Free has a 10 bottle Cellar limit.  To add more wines, upgrade to Drync Wine</string>
    <string name="freeex2_2">Pro.</string>
	<string name="noresults">No matching results could be found.</string>
	<string name="noresults2">Please try again!</string>
	<string name="nonetsearch">A Data Connection is required to perform a search.</string>
	<string name="nonet_twsearch">A Data Connection is required to fetch the </string>
	<string name="nonetsearch2">Please try again later when a connection is present.</string>
	<string name="nonettweet">Sorry, not connected to the internet right now, Try again later!</string>
	<string name="nosettingsyet">Due to data connection issues, no settings have been fetched from the server yet.</string>
	<string name="nosettingsyet2">Please try again later.</string>
	<string name="socialnotenabled">Facebook and Twitter are not enabled.  Please Visit the Drync Wine Settings.</string>
	<string name="socialupdated">Your friends have been updated.</string>
	<string name="twittersettingsmsg">You must configure Twitter first, in the "Settings" tab!</string>
	<string name="successfulcellaradd">You have successfully added this wine to your cellar.</string>
	<string name="failurecellaradd">This wine could not be added to your cellar.</string>
	<string name="successfulcellarupdate">You have successfully updated this wine in your cellar.</string>
	<string name="failurecellarupdate">This wine could not be updated in your cellar.</string>
	<string name="exceededcellaradd">You have reached the maximum number of wines in your free cellar.</string>
	<string name="exceededcellaradd2">Please consider upgrading to Drync Wine </string>
	<string name="exceededcellaradd3">Pro in order to store additional wines!</string>
	<string name="noreviewurl">There is no link attached to this review.</string>
	<string name="emailsubject">Hi! I\'m using Drync on my Android to send you this wine recommendation...</string>
	<string name="emailfooter">Drync-Wine - research and remember wines you enjoy using your iPhone or Android Device.</string>
	<string name="emailfooter2">To learn more visit www.drync.com</string>
	<string name="venueprompt">Please select a venue...</string>
	<string name="style_prompt">Choose a style</string>
    <string-array name="style_array">
        <item>Dessert</item>
        <item>Red</item>
        <item>Rosé</item>
        <item>Sparkling/Champagne</item>
        <item>Port</item>
        <item>White</item>
        <item>Other</item>
    </string-array>
    <string name="varietal_prompt">Choose a Varietal</string>
</resources>