<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/gray_paper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
	<TextView
            android:text="@string/find_your_wine"
            android:textSize="30sp"
            android:textColor="#000000"
            android:typeface="serif"
            android:layout_width="fill_parent" 
    		android:layout_height="fill_parent" 
    		android:layout_weight="1"
    		android:gravity="center_vertical|center_horizontal"
	/>
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:gravity="center_vertical|center_horizontal">
		
	<ImageView
			android:src="@drawable/glass"
			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:paddingLeft="20dip"
		/> 
		<TextView
            android:text="@string/fyw1"
            android:textSize="12sp"
            android:textColor="#000000"
            android:layout_width="fill_parent"
   			android:layout_height="wrap_content" 
   			android:paddingLeft="10dip"
   			android:paddingRight="20dip"
		/>
	
	</LinearLayout> 
	
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:gravity="center_vertical|center_horizontal">
		
	<ImageView
			android:src="@drawable/pencil"
			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:paddingLeft="20dip"
		/> 
		<TextView
            android:text="@string/fyw2"
            android:textSize="12sp"
            android:textColor="#000000"
            android:layout_width="fill_parent"
   			android:layout_height="wrap_content" 
   			android:paddingLeft="10dip"
   			android:paddingRight="20dip"
		/>
	
	</LinearLayout> 
	
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:gravity="center_vertical|center_horizontal">
		
		<ImageView
			android:src="@drawable/bottles"
			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"
   			android:paddingLeft="20dip"
		/> 
		<TextView
            android:text="@string/fyw3"
            android:textSize="12sp"
            android:textColor="#000000"
            android:layout_width="fill_parent"
   			android:layout_height="wrap_content" 
   			android:paddingLeft="10dip"
   			android:paddingRight="20dip"
		/>
	
	</LinearLayout> 
	
	<Button
        android:id="@+id/thanksGotIt"
        android:textColor="#FFFFFF"
        android:layout_width="125dip"
        android:layout_height="fill_parent"
        android:background="@drawable/qn_woodbutton"
        android:layout_gravity="center_horizontal"
        android:typeface="normal"
        android:textStyle="bold"
        android:layout_marginTop="15px"
        android:layout_marginBottom="15px"
        android:layout_weight="1"
        android:text="Thanks, I get it." />

	
	
	<ImageView
			android:src="@drawable/logo"
			android:layout_width="fill_parent"
   			android:layout_height="fill_parent"
   			android:layout_gravity="center_horizontal"
   			android:layout_weight="1"
		/> 
</LinearLayout>
